.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: siconfws-service
spec:
  selector:
    app: siconfws-pod
  type: ClusterIP
  ports:
    - name: http
      port: 80 #porta interna
      targetPort: http #porta a aplicação
