.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: siconfws-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: siconfws.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - siconfws-homo.policiacivil.go.gov.br
        - siconfws.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: siconfws-homo.policiacivil.go.gov.br
      http:
        paths:
          - path: /
            backend:
              serviceName: siconfws-service
              servicePort: http
